--- a/整理區間.md
+++ b/整理區間.md
@@ -1,5 +1,5 @@
 //@version=5
-indicator("整理區間標註", overlay=true)
+indicator("整理區間", overlay=true)
 
 // 參數設置
 lookbackPeriod = input.int(20, "回看期間", minval=5)
